[package]
name = "bps_bms_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = "*"
tokio-serial = "5.4.4"
csv = "1.3"
chrono = "0.4.1"
serde = { version = "1.0", features = ["derive"] }